# amocrm-mcp

./: .dockerignore  Dockerfile  README-deploy.md  README.md  docker-compose.yml  pyproject.toml
amocrm_mcp/: auth.py  client.py  config.py  server.py
amocrm_mcp/tools/: account.py  analytics.py  companies.py  contacts.py  leads.py  notes.py  tasks.py  unsorted.py
